--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 .hidden {
   display: none;
 }
+
+body {background-image: ;}
+* {margin: 0;  padding: 0;}
+img {display: block;}
+li {list-style: none;}
+
+.backgraundIMG{
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  /* animation: fadeIn .5s linear; */
+}
